--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         ".devcontainer/": true,
         ".paket/": true,
         ".vscode/": true,
+        ".github/": true,
         ".gitignore": true,
         "License.md": true,
         "package-lock.json": true,
