--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.187.0/containers/azure-static-web-apps
 {
-	"name": "Conway Game of Life Static Web App",
+	"name": "Tic Tac Toe",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
