--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 # Find the Dockerfile for mcr.microsoft.com/azure-functions/python:3.0-python3.8-core-tools at this URL
 # https://github.com/Azure/azure-functions-docker/blob/dev/host/3.0/buster/amd64/python/python38/python38-core-tools.Dockerfile
-FROM mcr.microsoft.com/azure-functions/python:3.0-python3.8-core-tools
+# FROM mcr.microsoft.com/azure-functions/python:3.0-python3.8-core-tools
+FROM mcr.microsoft.com/azure-functions/dotnet
 
 # Copy library scripts to execute
 COPY library-scripts/*.sh library-scripts/*.env /tmp/library-scripts/
