--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-        "command": "swa start http://localhost:3000",
+        "command": "swa start http://localhost:3000 --api http://localhost:7071",
         "name": "Run emulator",
         "request": "launch",
         "type": "node-terminal"
@@ -12,6 +12,13 @@
         "name": "Run frontend",
         "request": "launch",
         "type": "node-terminal"
+    },
+    {
+        "command": "func start",
+        "name": "Run backend",
+        "request": "launch",
+        "type": "node-terminal",
+        "cwd": "${workspaceFolder}/api"
     }
 ],
   "compounds": [
@@ -19,7 +26,8 @@
       "name": "Launch it all 🚀",
       "configurations": [
         "Run emulator",
-        "Run frontend"
+        "Run frontend",
+        "Run backend"
       ]
     }
   ]
