Add staticwebapp.config.json (#5)
* Add staticwebapp.config.json

* try to copy staticwebapp.config.json to public directory after build

* Add src to path of staticwebapp.config.json

* another fix in the cp command

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "start": "dotnet fable watch src --sourceMaps --run vite",
-    "build": "dotnet fable src --sourceMaps --run vite build",
+    "build": "dotnet fable src --sourceMaps --run vite build && cp src/staticwebapp.config.json public/",
     "serve": "vite serve"
   },
   "devDependencies": {
