--- a/api/api.fsproj
+++ b/api/api.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GetMessage.fs" />
+    <Compile Include="negotiate.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
