--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "name": "tic-tac-toe",
   "version": "1.0.0",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@microsoft/signalr": "^5.0.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
