--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-        "command": "swa start http://localhost:3000 --api http://localhost:7071",
+        "command": "swa start http://localhost:3000 --api-location http://localhost:7071",
         "name": "Run emulator",
         "request": "launch",
         "type": "node-terminal"
@@ -25,9 +25,9 @@
     {
       "name": "Launch it all 🚀",
       "configurations": [
-        "Run emulator",
+        "Run backend",
         "Run frontend",
-        "Run backend"
+        "Run emulator"
       ]
     }
   ]
